[tool.black]
line-length = 79

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "one-peace-demo"
version = "0.0.1"
description = ""
authors = ["VERSES Tech"]
readme = "README.md"

[tool.poetry.dependencies]
opencv-python = "^4.7.0.72"
requests = "^2.28.1"
tensorboardX = "^2.6"
einops = "^0.6.1"
soundfile = "^0.12.1"
omegaconf = "^2.0.6"
pillow = "^8.4.0"
timm = "^0.6.11"
iopath = "^0.1.10"
pydub = "^0.25.1"
scikit-learn = "^1.0.2"
librosa = "^0.10.0"
wget = "^3.2"
python = "^3.10"
fairseq = "^v0.12.2"